// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ProgramCard > Snapshot Tests > should match snapshot with full program 1`] = `
<div
  class="rounded-lg border bg-card text-card-foreground shadow-sm"
>
  <div
    class="flex flex-col space-y-1.5 p-6"
  >
    <div
      class="flex items-start justify-between gap-4"
    >
      <div
        class="flex-1 min-w-0"
      >
        <h3
          class="text-2xl font-semibold leading-none tracking-tight flex items-center gap-2 flex-wrap"
        >
          <svg
            class="lucide lucide-book-open h-5 w-5 flex-shrink-0"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M2 3h6a4 4 0 0 1 4 4v14a3 3 0 0 0-3-3H2z"
            />
            <path
              d="M22 3h-6a4 4 0 0 0-4 4v14a3 3 0 0 1 3-3h7z"
            />
          </svg>
          <span
            class="truncate"
          >
            Certified Business Technician
          </span>
          <div
            class="inline-flex items-center rounded-full border px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 text-foreground flex-shrink-0"
          >
            CBT-101
          </div>
        </h3>
        <p
          class="text-sm text-muted-foreground mt-2 line-clamp-2"
        >
          Comprehensive business technology certification program
        </p>
      </div>
      <div
        class="flex flex-col gap-2"
      >
        <div
          class="inline-flex items-center rounded-full border px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 bg-green-500/10 text-green-500"
        >
          active
        </div>
        <div
          class="inline-flex items-center rounded-full border px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 bg-green-500/10 text-green-500"
        >
          <svg
            class="lucide lucide-eye h-3 w-3 mr-1"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M2 12s3-7 10-7 10 7 10 7-3 7-10 7-10-7-10-7Z"
            />
            <circle
              cx="12"
              cy="12"
              r="3"
            />
          </svg>
          Published
        </div>
      </div>
    </div>
  </div>
  <div
    class="p-6 pt-0"
  >
    <div
      class="space-y-4"
    >
      <div
        class="flex items-center gap-2 text-sm"
      >
        <svg
          class="lucide lucide-building2 h-4 w-4 text-muted-foreground"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M6 22V4a2 2 0 0 1 2-2h8a2 2 0 0 1 2 2v18Z"
          />
          <path
            d="M6 12H4a2 2 0 0 0-2 2v6a2 2 0 0 0 2 2h2"
          />
          <path
            d="M18 9h2a2 2 0 0 1 2 2v9a2 2 0 0 1-2 2h-2"
          />
          <path
            d="M10 6h4"
          />
          <path
            d="M10 10h4"
          />
          <path
            d="M10 14h4"
          />
          <path
            d="M10 18h4"
          />
        </svg>
        <span
          class="font-medium"
        >
          Business Technology
        </span>
      </div>
      <div
        class="flex items-center gap-4 flex-wrap text-sm"
      >
        <div
          class="flex items-center gap-2"
        >
          <svg
            class="lucide lucide-award h-4 w-4 text-muted-foreground"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="8"
              r="6"
            />
            <path
              d="M15.477 12.89 17 22l-5-3-5 3 1.523-9.11"
            />
          </svg>
          <div
            class="inline-flex items-center rounded-full border px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 bg-blue-500/10 text-blue-500"
          >
            certificate
          </div>
        </div>
        <div
          class="flex items-center gap-2"
        >
          <svg
            class="lucide lucide-clock h-4 w-4 text-muted-foreground"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="10"
            />
            <polyline
              points="12 6 12 12 16 14"
            />
          </svg>
          <span
            class="text-muted-foreground"
          >
            6 months
          </span>
        </div>
      </div>
      <div
        class="grid grid-cols-3 gap-4 pt-4 border-t"
      >
        <div
          class="text-center"
        >
          <div
            class="text-2xl font-bold"
          >
            3
          </div>
          <div
            class="text-xs text-muted-foreground"
          >
            Levels
          </div>
        </div>
        <div
          class="text-center"
        >
          <div
            class="text-2xl font-bold"
          >
            12
          </div>
          <div
            class="text-xs text-muted-foreground"
          >
            Courses
          </div>
        </div>
        <div
          class="text-center"
        >
          <div
            class="text-2xl font-bold"
          >
            45
          </div>
          <div
            class="text-xs text-muted-foreground"
          >
            Enrolled
          </div>
        </div>
      </div>
      <div
        class="pt-4 border-t"
      >
        <div
          class="flex items-center justify-between text-sm"
        >
          <span
            class="text-muted-foreground"
          >
            Completion Rate
          </span>
          <span
            class="font-medium"
          >
            25
            %
          </span>
        </div>
      </div>
      <div
        class="pt-4 border-t flex items-center gap-2 text-xs text-muted-foreground"
      >
        <svg
          class="lucide lucide-calendar h-3 w-3"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8 2v4"
          />
          <path
            d="M16 2v4"
          />
          <rect
            height="18"
            rx="2"
            width="18"
            x="3"
            y="4"
          />
          <path
            d="M3 10h18"
          />
        </svg>
        <span>
          Created 
          12/1/2025
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`ProgramCard > Snapshot Tests > should match snapshot with list item 1`] = `
<div
  class="rounded-lg border bg-card text-card-foreground shadow-sm"
>
  <div
    class="flex flex-col space-y-1.5 p-6"
  >
    <div
      class="flex items-start justify-between gap-4"
    >
      <div
        class="flex-1 min-w-0"
      >
        <h3
          class="text-2xl font-semibold leading-none tracking-tight flex items-center gap-2 flex-wrap"
        >
          <svg
            class="lucide lucide-book-open h-5 w-5 flex-shrink-0"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M2 3h6a4 4 0 0 1 4 4v14a3 3 0 0 0-3-3H2z"
            />
            <path
              d="M22 3h-6a4 4 0 0 0-4 4v14a3 3 0 0 1 3-3h7z"
            />
          </svg>
          <span
            class="truncate"
          >
            Certified Business Technician
          </span>
          <div
            class="inline-flex items-center rounded-full border px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 text-foreground flex-shrink-0"
          >
            CBT-101
          </div>
        </h3>
        <p
          class="text-sm text-muted-foreground mt-2 line-clamp-2"
        >
          Comprehensive business technology certification program
        </p>
      </div>
      <div
        class="flex flex-col gap-2"
      >
        <div
          class="inline-flex items-center rounded-full border px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 bg-green-500/10 text-green-500"
        >
          active
        </div>
        <div
          class="inline-flex items-center rounded-full border px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 bg-green-500/10 text-green-500"
        >
          <svg
            class="lucide lucide-eye h-3 w-3 mr-1"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M2 12s3-7 10-7 10 7 10 7-3 7-10 7-10-7-10-7Z"
            />
            <circle
              cx="12"
              cy="12"
              r="3"
            />
          </svg>
          Published
        </div>
      </div>
    </div>
  </div>
  <div
    class="p-6 pt-0"
  >
    <div
      class="space-y-4"
    >
      <div
        class="flex items-center gap-2 text-sm"
      >
        <svg
          class="lucide lucide-building2 h-4 w-4 text-muted-foreground"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M6 22V4a2 2 0 0 1 2-2h8a2 2 0 0 1 2 2v18Z"
          />
          <path
            d="M6 12H4a2 2 0 0 0-2 2v6a2 2 0 0 0 2 2h2"
          />
          <path
            d="M18 9h2a2 2 0 0 1 2 2v9a2 2 0 0 1-2 2h-2"
          />
          <path
            d="M10 6h4"
          />
          <path
            d="M10 10h4"
          />
          <path
            d="M10 14h4"
          />
          <path
            d="M10 18h4"
          />
        </svg>
        <span
          class="font-medium"
        >
          Business Technology
        </span>
      </div>
      <div
        class="flex items-center gap-4 flex-wrap text-sm"
      >
        <div
          class="flex items-center gap-2"
        >
          <svg
            class="lucide lucide-award h-4 w-4 text-muted-foreground"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="8"
              r="6"
            />
            <path
              d="M15.477 12.89 17 22l-5-3-5 3 1.523-9.11"
            />
          </svg>
          <div
            class="inline-flex items-center rounded-full border px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 bg-blue-500/10 text-blue-500"
          >
            certificate
          </div>
        </div>
        <div
          class="flex items-center gap-2"
        >
          <svg
            class="lucide lucide-clock h-4 w-4 text-muted-foreground"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="10"
            />
            <polyline
              points="12 6 12 12 16 14"
            />
          </svg>
          <span
            class="text-muted-foreground"
          >
            6 months
          </span>
        </div>
      </div>
      <div
        class="grid grid-cols-3 gap-4 pt-4 border-t"
      >
        <div
          class="text-center"
        >
          <div
            class="text-2xl font-bold"
          >
            3
          </div>
          <div
            class="text-xs text-muted-foreground"
          >
            Levels
          </div>
        </div>
        <div
          class="text-center"
        >
          <div
            class="text-2xl font-bold"
          >
            12
          </div>
          <div
            class="text-xs text-muted-foreground"
          >
            Courses
          </div>
        </div>
        <div
          class="text-center"
        >
          <div
            class="text-2xl font-bold"
          >
            45
          </div>
          <div
            class="text-xs text-muted-foreground"
          >
            Enrolled
          </div>
        </div>
      </div>
      <div
        class="pt-4 border-t flex items-center gap-2 text-xs text-muted-foreground"
      >
        <svg
          class="lucide lucide-calendar h-3 w-3"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8 2v4"
          />
          <path
            d="M16 2v4"
          />
          <rect
            height="18"
            rx="2"
            width="18"
            x="3"
            y="4"
          />
          <path
            d="M3 10h18"
          />
        </svg>
        <span>
          Created 
          12/1/2025
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`ProgramCard > Snapshot Tests > should match snapshot with onClick handler 1`] = `
<div
  class="rounded-lg border bg-card text-card-foreground shadow-sm cursor-pointer transition-colors hover:bg-accent"
>
  <div
    class="flex flex-col space-y-1.5 p-6"
  >
    <div
      class="flex items-start justify-between gap-4"
    >
      <div
        class="flex-1 min-w-0"
      >
        <h3
          class="text-2xl font-semibold leading-none tracking-tight flex items-center gap-2 flex-wrap"
        >
          <svg
            class="lucide lucide-book-open h-5 w-5 flex-shrink-0"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M2 3h6a4 4 0 0 1 4 4v14a3 3 0 0 0-3-3H2z"
            />
            <path
              d="M22 3h-6a4 4 0 0 0-4 4v14a3 3 0 0 1 3-3h7z"
            />
          </svg>
          <span
            class="truncate"
          >
            Certified Business Technician
          </span>
          <div
            class="inline-flex items-center rounded-full border px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 text-foreground flex-shrink-0"
          >
            CBT-101
          </div>
        </h3>
        <p
          class="text-sm text-muted-foreground mt-2 line-clamp-2"
        >
          Comprehensive business technology certification program
        </p>
      </div>
      <div
        class="flex flex-col gap-2"
      >
        <div
          class="inline-flex items-center rounded-full border px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 bg-green-500/10 text-green-500"
        >
          active
        </div>
        <div
          class="inline-flex items-center rounded-full border px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 bg-green-500/10 text-green-500"
        >
          <svg
            class="lucide lucide-eye h-3 w-3 mr-1"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M2 12s3-7 10-7 10 7 10 7-3 7-10 7-10-7-10-7Z"
            />
            <circle
              cx="12"
              cy="12"
              r="3"
            />
          </svg>
          Published
        </div>
      </div>
    </div>
  </div>
  <div
    class="p-6 pt-0"
  >
    <div
      class="space-y-4"
    >
      <div
        class="flex items-center gap-2 text-sm"
      >
        <svg
          class="lucide lucide-building2 h-4 w-4 text-muted-foreground"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M6 22V4a2 2 0 0 1 2-2h8a2 2 0 0 1 2 2v18Z"
          />
          <path
            d="M6 12H4a2 2 0 0 0-2 2v6a2 2 0 0 0 2 2h2"
          />
          <path
            d="M18 9h2a2 2 0 0 1 2 2v9a2 2 0 0 1-2 2h-2"
          />
          <path
            d="M10 6h4"
          />
          <path
            d="M10 10h4"
          />
          <path
            d="M10 14h4"
          />
          <path
            d="M10 18h4"
          />
        </svg>
        <span
          class="font-medium"
        >
          Business Technology
        </span>
      </div>
      <div
        class="flex items-center gap-4 flex-wrap text-sm"
      >
        <div
          class="flex items-center gap-2"
        >
          <svg
            class="lucide lucide-award h-4 w-4 text-muted-foreground"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="8"
              r="6"
            />
            <path
              d="M15.477 12.89 17 22l-5-3-5 3 1.523-9.11"
            />
          </svg>
          <div
            class="inline-flex items-center rounded-full border px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 bg-blue-500/10 text-blue-500"
          >
            certificate
          </div>
        </div>
        <div
          class="flex items-center gap-2"
        >
          <svg
            class="lucide lucide-clock h-4 w-4 text-muted-foreground"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="10"
            />
            <polyline
              points="12 6 12 12 16 14"
            />
          </svg>
          <span
            class="text-muted-foreground"
          >
            6 months
          </span>
        </div>
      </div>
      <div
        class="grid grid-cols-3 gap-4 pt-4 border-t"
      >
        <div
          class="text-center"
        >
          <div
            class="text-2xl font-bold"
          >
            3
          </div>
          <div
            class="text-xs text-muted-foreground"
          >
            Levels
          </div>
        </div>
        <div
          class="text-center"
        >
          <div
            class="text-2xl font-bold"
          >
            12
          </div>
          <div
            class="text-xs text-muted-foreground"
          >
            Courses
          </div>
        </div>
        <div
          class="text-center"
        >
          <div
            class="text-2xl font-bold"
          >
            45
          </div>
          <div
            class="text-xs text-muted-foreground"
          >
            Enrolled
          </div>
        </div>
      </div>
      <div
        class="pt-4 border-t flex items-center gap-2 text-xs text-muted-foreground"
      >
        <svg
          class="lucide lucide-calendar h-3 w-3"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8 2v4"
          />
          <path
            d="M16 2v4"
          />
          <rect
            height="18"
            rx="2"
            width="18"
            x="3"
            y="4"
          />
          <path
            d="M3 10h18"
          />
        </svg>
        <span>
          Created 
          12/1/2025
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`ProgramCard > Snapshot Tests > should match snapshot without metadata 1`] = `
<div
  class="rounded-lg border bg-card text-card-foreground shadow-sm"
>
  <div
    class="flex flex-col space-y-1.5 p-6"
  >
    <div
      class="flex items-start justify-between gap-4"
    >
      <div
        class="flex-1 min-w-0"
      >
        <h3
          class="text-2xl font-semibold leading-none tracking-tight flex items-center gap-2 flex-wrap"
        >
          <svg
            class="lucide lucide-book-open h-5 w-5 flex-shrink-0"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M2 3h6a4 4 0 0 1 4 4v14a3 3 0 0 0-3-3H2z"
            />
            <path
              d="M22 3h-6a4 4 0 0 0-4 4v14a3 3 0 0 1 3-3h7z"
            />
          </svg>
          <span
            class="truncate"
          >
            Certified Business Technician
          </span>
          <div
            class="inline-flex items-center rounded-full border px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 text-foreground flex-shrink-0"
          >
            CBT-101
          </div>
        </h3>
        <p
          class="text-sm text-muted-foreground mt-2 line-clamp-2"
        >
          Comprehensive business technology certification program
        </p>
      </div>
      <div
        class="flex flex-col gap-2"
      >
        <div
          class="inline-flex items-center rounded-full border px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 bg-green-500/10 text-green-500"
        >
          active
        </div>
        <div
          class="inline-flex items-center rounded-full border px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 bg-green-500/10 text-green-500"
        >
          <svg
            class="lucide lucide-eye h-3 w-3 mr-1"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M2 12s3-7 10-7 10 7 10 7-3 7-10 7-10-7-10-7Z"
            />
            <circle
              cx="12"
              cy="12"
              r="3"
            />
          </svg>
          Published
        </div>
      </div>
    </div>
  </div>
</div>
`;
